[package]
name = "wscrab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
colored = "2.0.0"
futures = "0.3.25"
regex = "1.7.0"
rustyline = "11.0.0"
shlex = "1.1.0"
tokio = "1.23.0"
websocket = "0.26.5"
tokio = { version = "1", features = ["full"] }
websocket = "0.26.5"
tokio-tungstenite = "0.18.0"
futures-util = "0.3.17"
futures = "0.3.17"
url = "2.3.1"
rustyline-async = "*"
simplelog = "0.12.0"
log = "0.4.17"

